--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,8 +2,10 @@ env:
   es6: true
   node: true
 
-extends: eslint:recommended
-
+extends:
+  - eslint:recommended
+  - plugin:vue/essential
+  
 parserOptions: 
   ecmaVersion: 2018
 
