--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "eyeballing",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {},
+  "description": "An eyeballing test.",
+  "dependencies": {
+    "vue": "^2.5.17"
+  },
   "devDependencies": {
+    "@sfc2js/sass": "^1.0.1",
     "commander": "^2.19.0",
     "eslint": "^5.6.1",
+    "eslint-plugin-vue": "^5.0.0-beta.3",
     "html-minifier": "^3.5.20",
     "node-sass": "^4.9.3",
+    "sfc2js": "^3.3.2",
     "webpack": "^4.20.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint .",
+    "build": "node build"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "shigma <1700011071@pku.edu.cn>",
+  "license": "MIT"
 }
