add some adjustments
1. 增加了倒计时功能
2. 优化了“下一轮”的行为
3. 增加了对垃圾浏览器 Edge 的检测和提示语

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "file-saver": "^2.0.0-rc.3",
     "neat-scroll": "^2.0.1",
+    "ua-parser-js": "^0.7.18",
     "vue": "^2.5.17"
   },
   "devDependencies": {
